# os-lab

./: README.md
cp/: buddy.c  buddy.h  lib.c  list_of_free.c  list_of_free.h  main.c  makefile
lab1/: a.out  child.c  child.out  main.c  norm.txt
lab2/: bigmatrix.txt  main.cpp  matrix.txt  out.txt  ﻿out.txt
lab3/: child.c  main.c  norm.txt
lab4/: CMakeLists.txt  lib1.cpp  lib2.cpp  libs.h  main_link.cpp  main_load.cpp
lab4/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  linking  loading
lab5-7/: calc.cpp  main.cpp  makefile  tree.h
